plugins/mermaid/src/test/resources/intention/declarations/merge.mermaid
gitgraph
  commit id: "<error descr="Conflicting commit id">123</error>"
  merge <error descr="Unresolved branch">main</error> id: "<error descr="Conflicting commit id">123</error>"